[gd_scene load_steps=7 format=2]

[ext_resource path="res://font/KiwiMaru25.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/widgets/button/flatbtn.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/widgets/button/btn.tscn" type="PackedScene" id=3]
[ext_resource path="res://font/KiwiMaru64.tres" type="DynamicFont" id=4]
[ext_resource path="res://scenes/game/leaderboard/leaderboard.gd" type="Script" id=5]

[sub_resource type="Animation" id=1]
resource_name = "show"
length = 0.4
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 200, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:rect_scale:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0.8, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:rect_scale:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0.8, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}

[node name="leaderboard" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 512, 300 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="."]
margin_left = 76.9966
margin_top = 30.522
margin_right = 476.997
margin_bottom = 124.522
rect_min_size = Vector2( 400, 0 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "RESULTS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="entries" type="VBoxContainer" parent="."]
margin_left = 63.0
margin_top = 130.0
margin_right = 463.0
margin_bottom = 570.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playagainbtn" parent="." instance=ExtResource( 3 )]
margin_left = 499.648
margin_top = 176.0
margin_right = 699.648
margin_bottom = 224.0

[node name="Label" parent="playagainbtn" index="2"]
text = "AGAIN"

[node name="playagainlabel" type="Label" parent="."]
margin_left = 437.0
margin_top = 260.0
margin_right = 961.0
margin_bottom = 288.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="leavebtn" parent="." instance=ExtResource( 2 )]
margin_left = 600.0
margin_top = 350.0
margin_right = 800.0
margin_bottom = 398.0

[node name="Label" parent="leavebtn" index="2"]
text = "LEAVE"

[node name="inserttimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/show = SubResource( 1 )
[connection signal="pressed" from="playagainbtn" to="." method="vote_play_again"]
[connection signal="pressed" from="leavebtn" to="." method="leave_game"]
[connection signal="timeout" from="inserttimer" to="." method="show_next_entry"]

[editable path="playagainbtn"]

[editable path="leavebtn"]
